# ffi-mock

./: Cargo.toml  README.md
ffi-mock-macro/: Cargo.toml
ffi-mock-macro/src/: lib.rs
src/: ffi_mock.rs  lib.rs
