workspace = { members = ["ffi-mock-macro"] }
[package]
name = "ffi-mock"
version = "0.1.0"
edition = "2021"
authors = ["Pil Eghoff <contact@pil.fyi>"]
description = "A dead simple way of mocking extern functions, in cases where the external library is not avaible."
readme = "README.md"
repository = "https://github.com/pileghoff/ffi-mock"
license = "MIT OR Apache-2.0"
keywords = ["mock", "testing", "ffi", "embedded"]
categories = ["development-tools::ffi", "development-tools::testing", "embedded"]

[dependencies]
lazy_static = "1.4.0"
ffi-mock-macro = { path = "ffi-mock-macro" }
