[package]
name = "ffi-mock-macro"
version = "0.1.0"
edition = "2021"
authors = ["Pil Eghoff <contact@pil.fyi>"]
description = "Proc macros for ffi-mock"
repository = "https://github.com/pileghoff/ffi-mock"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features=["full"]}
quote = "1.0"
